[gd_scene load_steps=9 format=3 uid="uid://bvhe7vn46ova6"]

[ext_resource type="Script" path="res://scenes/welcome.gd" id="1_6csii"]
[ext_resource type="Script" path="res://scenes/ColorRect2.gd" id="1_36824"]
[ext_resource type="Script" path="res://scenes/HostRoom.gd" id="3_5wr3u"]
[ext_resource type="StyleBox" uid="uid://lay2tst8qkh" path="res://new_style_box_flat.tres" id="3_ry7hu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qh35"]
bg_color = Color(0.301961, 0, 0.12549, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0470588, 0.321569, 0.388235, 0.6)
shadow_size = 5
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_suvl1"]
bg_color = Color(0.54902, 0, 0.25098, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0156863, 0, 0.168627, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0901961, 0.478431, 0.572549, 0.6)
shadow_size = 5
shadow_offset = Vector2(1, 1)

[sub_resource type="Theme" id="Theme_d4bkx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxl03"]
bg_color = Color(0.486275, 0.631373, 0.635294, 1)
border_width_left = 1
border_width_top = 10
border_width_right = 1
border_width_bottom = 10
border_color = Color(0.266667, 0.47451, 0.631373, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Control1" type="Node2D"]
z_index = 1
script = ExtResource("1_6csii")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -20.0
offset_right = 1174.0
offset_bottom = 658.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
color = Color(0.113725, 0.0588235, 0.211765, 1)
metadata/_edit_lock_ = true

[node name="singleplayer" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 135.0
offset_top = 79.0
offset_right = 419.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_7qh35")
theme_override_styles/hover = SubResource("StyleBoxFlat_suvl1")
text = "Single Player"

[node name="mutliplayer" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 135.0
offset_top = 138.0
offset_right = 425.0
offset_bottom = 182.0
theme = SubResource("Theme_d4bkx")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_7qh35")
theme_override_styles/hover = SubResource("StyleBoxFlat_suvl1")
text = "Multiplayer"

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 82.0
offset_top = -375.0
offset_right = 479.0
offset_bottom = -80.0
grow_vertical = 0
script = ExtResource("1_36824")

[node name="OK" type="Button" parent="ColorRect/ColorRect2"]
layout_mode = 0
offset_left = 172.0
offset_top = 59.0
offset_right = 205.0
offset_bottom = 92.0
text = "OK"

[node name="OptionButton" type="OptionButton" parent="ColorRect/ColorRect2"]
layout_mode = 0
offset_left = 144.0
offset_top = 95.0
offset_right = 234.0
offset_bottom = 121.0
alignment = 1
item_count = 1
popup/item_0/text = "Black"
popup/item_0/id = 3
popup/item_0/separator = true

[node name="username" type="LineEdit" parent="ColorRect/ColorRect2"]
layout_mode = 0
offset_left = 136.0
offset_top = 17.0
offset_right = 249.0
offset_bottom = 53.0
theme_override_colors/font_uneditable_color = Color(0, 0.207843, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Username"

[node name="multiplayerpanel" type="Panel" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -338.5
offset_top = -234.5
offset_right = 338.5
offset_bottom = 234.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_sxl03")

[node name="HostRoom" type="Button" parent="ColorRect/multiplayerpanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -106.0
offset_right = 46.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.0352941, 0, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0, 0, 1)
text = "Host Room"
script = ExtResource("3_5wr3u")

[node name="BACK" type="Button" parent="ColorRect/multiplayerpanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.5
offset_top = 15.5
offset_right = -7.5
offset_bottom = 55.5
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = ExtResource("3_ry7hu")
theme_override_styles/hover = ExtResource("3_ry7hu")
text = "x"

[node name="Quit" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1034.0
offset_top = 575.0
offset_right = 1145.0
offset_bottom = 640.0
grow_horizontal = 0
grow_vertical = 0
text = "Quit"

[connection signal="pressed" from="ColorRect/mutliplayer" to="." method="_on_mutliplayer_pressed"]
[connection signal="button_up" from="ColorRect/ColorRect2/OK" to="." method="_on_ok_button_up"]
[connection signal="item_selected" from="ColorRect/ColorRect2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="ColorRect/multiplayerpanel/HostRoom" to="ColorRect/multiplayerpanel/HostRoom" method="_on_pressed"]
[connection signal="pressed" from="ColorRect/multiplayerpanel/BACK" to="." method="_on_back_pressed"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
